--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
@@ -53,7 +54,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.15'
     implementation 'com.google.dagger:dagger-android:2.15'
     implementation 'com.google.dagger:dagger-android-support:2.15' // if you use the support libraries
-    kapt 'com.google.dagger:dagger-compiler:2.x'
+    kapt 'com.google.dagger:dagger-compiler:2.15'
     kapt 'com.google.dagger:dagger-android-processor:2.15'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
