--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -66,6 +67,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
-    kapt            'com.android.databinding:compiler:3.1.4'
+    kapt           'com.android.databinding:compiler:3.1.4'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
 }
